--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "tsx main.ts",
+    "dev": "tsx watch --ignore ./*.mjs --ignore ./src/app/**/* --clear-screen=false main.ts",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -14,8 +14,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "tsx": "^4.19.0",
     "typescript": "^5.5.3",
-    "vite": "^5.4.1",
-    "vite-plugin-restart": "^0.4.1"
+    "vite": "^5.4.1"
   },
   "dependencies": {
     "@fastify/middie": "^8.3.1",
